// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="ejtitxs0 cache-11a6inf e7ah3bn0"
  >
    <p>
      <span>
        Hello
      </span>
      <br />
      <span>
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .cache-jtfyvj>p {
  display: inline;
}

<div
    class="ejtitxs0 cache-jtfyvj e7ah3bn0"
  >
    <p>
      <span>
        I am a paragraph.
      </span>
    </p>
    <p>
      <span>
        And a second one
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .cache-rncxfo {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-rncxfo.cache-rncxfo {
  margin-top: 0;
}

.cache-ksiohk {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  color: #1e4293;
}

.cache-1grrt3w {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-11a6inf e7ah3bn0"
  >
    <h2
      class="e1g1zfwd0 cache-rncxfo e7ah3bn0"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="e4bq1r51 cache-ksiohk e7ah3bn0"
        href="https://commonmark.org/help/"
      >
        <span>
          here
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-1grrt3w e7ah3bn0"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .cache-rncxfo {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-rncxfo.cache-rncxfo {
  margin-top: 0;
}

.cache-ksiohk {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  color: #1e4293;
}

.cache-1bru70j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.cache-1bru70j.cache-1bru70j {
  vertical-align: top;
}

.cache-1grrt3w {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-11a6inf e7ah3bn0"
  >
    <h2
      class="e1g1zfwd0 cache-rncxfo e7ah3bn0"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="e4bq1r51 cache-ksiohk e7ah3bn0"
        href="https://commonmark.org/help/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          here
        </span>
        <svg
          class="e4bq1r50 etwatq50 cache-1bru70j e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-1grrt3w e7ah3bn0"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
